--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
 					{ src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
 					{ src: 'plugin/zoom-js/zoom.js', async: true },
-					{ src: 'plugin/notes/notes.js', async: true }
+					{ src: 'plugin/notes/notes.js', async: true },
+
+					{ src: 'socket.io/socket.io.js', async: true },
+        	{ src: 'plugin/notes-server/client.js', async: true }
 				]
 			});
 
