refactored for restructured week one slide files

--- a/index.html
+++ b/index.html
@@ -51,25 +51,37 @@
 			<div class="slides">
 
 				<!-- GA FEWD Week 1-->
-				<section data-markdown="GA/FEWD_Curriculum/Week_00_Beginning/intro.md"
+				<section data-markdown="GA/FEWD_Curriculum/Week_00_Beginning/slides_intro.md"
 				 data-separator="^---"
 				 data-separator-vertical="^--"
 				 data-separator-notes="^Note:"
 				 data-charset="iso-8859-15">
 				</section>
-				<section data-markdown="GA/FEWD_Curriculum/Week_00_Github/slides.md"
+				<section data-markdown="GA/FEWD_Curriculum/Week_00_Github/slides_git.md"
 				 data-separator="^---"
 				 data-separator-vertical="^--"
 				 data-separator-notes="^Note:"
 				 data-charset="iso-8859-15">
 				</section>
-				<section data-markdown="GA/FEWD_Curriculum/Week_01_Basics/01_html_basics/slides.md"
+				<section data-markdown="GA/FEWD_Curriculum/Week_01_Basics/01_html_basics/slides_html1.md"
 				 data-separator="^---"
 				 data-separator-vertical="^--"
 				 data-separator-notes="^Note:"
 				 data-charset="iso-8859-15">
 				</section>
-				<section data-markdown="GA/FEWD_Curriculum/Week_01_Basics/02_css_basics/slides.md"
+				<section data-markdown="GA/FEWD_Curriculum/Week_01_Basics/01_html_basics/slides_css1.md"
+				 data-separator="^---"
+				 data-separator-vertical="^--"
+				 data-separator-notes="^Note:"
+				 data-charset="iso-8859-15">
+				</section>
+				<section data-markdown="GA/FEWD_Curriculum/Week_01_Basics/02_css_basics/slides_html2.md"
+				 data-separator="^---"
+				 data-separator-vertical="^--"
+				 data-separator-notes="^Note:"
+				 data-charset="iso-8859-15">
+				</section>
+				<section data-markdown="GA/FEWD_Curriculum/Week_01_Basics/02_css_basics/slides_css2.md"
 				 data-separator="^---"
 				 data-separator-vertical="^--"
 				 data-separator-notes="^Note:"
