--- a/plugin/notes-server/notes.html
+++ b/plugin/notes-server/notes.html
@@ -149,10 +149,10 @@
 			/* HACK START */
 			/*hack to show more of notes on small screen*/
 			#speaker-controls {
-			    top: 10%;
-			    width: 50%;
+			    top: 2%;
+			    width: 100%;
 			    height: 70%;
-					background: white;
+					background: rgba(255,255,255,0.85);
 			}
 			/* HACK END */
 
@@ -317,8 +317,9 @@
 
 				// HACK START
 				//hack to make buttons bigger on a small screen
-				var css = '.reveal .controls .navigate-right, .reveal .controls .navigate-right.enabled {border-width: 36px; left: 84px;}\n';
-				css += '.reveal .controls .navigate-left, .reveal .controls .navigate-left.enabled {border-width: 36px;}';
+				var css = '.reveal .controls .navigate-right, .reveal .controls .navigate-right.enabled {border-width: 60px; left: 200px;}\n';
+				css += '.reveal .controls .navigate-left, .reveal .controls .navigate-left.enabled {border-width: 60px;}';
+				css += '.reveal .controls {width: 300px; height: 180px;}'
 				var style = document.createElement('style');
 				style.type = 'text/css';
 				if (style.styleSheet){
