external md updates

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 
-				<!-- GA FEWD Week 1-->
+				<!-- GA FEWD Week 1
 				<section data-markdown="GA/FEWD_Curriculum/Week_00_Beginning/slides_intro.md"
 				 data-separator="^---"
 				 data-separator-vertical="^--"
@@ -86,8 +86,21 @@
 				 data-separator-vertical="^--"
 				 data-separator-notes="^Note:"
 				 data-charset="iso-8859-15">
-				</section>
+				</section>-->
 
+				<!-- GA FEWD Week 2-->
+				<section data-markdown="GA/FEWD_Curriculum/Week_02_Styling/03_box_model/slides.md"
+				 data-separator="^---"
+				 data-separator-vertical="^--"
+				 data-separator-notes="^Note:"
+				 data-charset="iso-8859-15">
+				</section>
+				<section data-markdown="GA/FEWD_Curriculum/Week_02_Styling/04_layout/slides.md"
+				 data-separator="^---"
+				 data-separator-vertical="^--"
+				 data-separator-notes="^Note:"
+				 data-charset="iso-8859-15">
+				</section>
 
 				<!-- GA PFNP
 				<section data-markdown="GA/PFPN/intro.md"
