--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 				 data-charset="iso-8859-15">
 				</section>-->
 
-				<!-- GA FEWD Week 2-->
+				<!-- GA FEWD Week 2
 				<section data-markdown="GA/FEWD_Curriculum/Week_02_Styling/03_box_model/slides.md"
 				 data-separator="^---"
 				 data-separator-vertical="^--"
@@ -100,7 +100,15 @@
 				 data-separator-vertical="^--"
 				 data-separator-notes="^Note:"
 				 data-charset="iso-8859-15">
-				</section>
+			 </section>-->
+
+			 <!-- GA FEWD Week 3-->
+			 <section data-markdown="GA/FEWD_Curriculum/Week_03_Layout/05_layout_lab/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
 
 				<!-- GA PFNP
 				<section data-markdown="GA/PFPN/intro.md"
