--- a/index.html
+++ b/index.html
@@ -102,8 +102,22 @@
 				 data-charset="iso-8859-15">
 			 </section>-->
 
-			 <!-- GA FEWD Week 3-->
+			 <!-- GA FEWD Week 3
 			 <section data-markdown="GA/FEWD_Curriculum/Week_03_Layout/05_layout_lab/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>-->
+
+			 <!-- GA FEWD Week 4-->
+			 <section data-markdown="GA/FEWD_Curriculum/Week_04_Intro_Programming/07_intro_programming/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_04_Intro_Programming/08_Intro_jQuery/slides.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
