--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 				data-charset="iso-8859-15">
 			 </section>-->
 
-			 <!-- GA FEWD Week 4-->
+			 <!-- GA FEWD Week 4
 			 <section data-markdown="GA/FEWD_Curriculum/Week_04_Intro_Programming/07_intro_programming/slides.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
@@ -118,6 +118,26 @@
 				data-charset="iso-8859-15">
 			 </section>
 			 <section data-markdown="GA/FEWD_Curriculum/Week_04_Intro_Programming/08_Intro_jQuery/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>-->
+
+			 <!-- GA FEWD Week 5-->
+			 <section data-markdown="GA/FEWD_Curriculum/Week_05_JS_ComputerScience/09_variables_conditionals/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_05_JS_ComputerScience/10_functions/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_05_JS_ComputerScience/10a_advance_arrays/slides.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
