--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				data-charset="iso-8859-15">
 			 </section>-->
 
-			 <!-- GA FEWD Week 5-->
+			 <!-- GA FEWD Week 5
 			 <section data-markdown="GA/FEWD_Curriculum/Week_05_JS_ComputerScience/09_variables_conditionals/slides.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
@@ -136,8 +136,16 @@
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
 				data-charset="iso-8859-15">
-			 </section>
+			 </section>-->
+
+			 <!-- GA FEWD Week 6 -->
 			 <section data-markdown="GA/FEWD_Curriculum/Week_05_JS_ComputerScience/10a_advance_arrays/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_06_Review_Refactor/12_refactor/slides.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
