--- a/index.html
+++ b/index.html
@@ -139,7 +139,19 @@
 			 </section>-->
 
 			 <!-- GA FEWD Week 6 -->
+			 <section data-markdown="GA/FEWD_Curriculum/Week_06_Review_Refactor/11_lab/slides_1.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
 			 <section data-markdown="GA/FEWD_Curriculum/Week_05_JS_ComputerScience/10a_advance_arrays/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_06_Review_Refactor/11_lab/slides_2.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
