week7 and week8 wip

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				data-charset="iso-8859-15">
 			 </section>-->
 
-			 <!-- GA FEWD Week 6 -->
+			 <!-- GA FEWD Week 6
 			 <section data-markdown="GA/FEWD_Curriculum/Week_06_Review_Refactor/11_lab/slides_1.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
@@ -162,7 +162,45 @@
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
 				data-charset="iso-8859-15">
+			 </section> -->
+
+			 <!-- GA FEWD Week 7 -->
+			 <section data-markdown="GA/FEWD_Curriculum/Week_07_Multiple_Screens/13_responsive_basics/slides_1.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
 			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_06_Review_Refactor/12_refactor/slides_debugging.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_07_Multiple_Screens/13_responsive_basics/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_07_Multiple_Screens/14_lab_responsive/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
+
+			 <!-- GA FEWD Week 8
+			 <section data-markdown="GA/FEWD_Curriculum/Week_08_forms_and_things/15_forms_basics/slides_1.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>-->
+
+			 <!-- GA FEWD Week 9 -->
+			 
+			 <!-- GA FEWD Week 10 -->
 
 				<!-- GA PFNP
 				<section data-markdown="GA/PFPN/intro.md"
