week7 and week8

--- a/index.html
+++ b/index.html
@@ -190,16 +190,22 @@
 				data-charset="iso-8859-15">
 			 </section>
 
-			 <!-- GA FEWD Week 8
-			 <section data-markdown="GA/FEWD_Curriculum/Week_08_forms_and_things/15_forms_basics/slides_1.md"
+			 <!-- GA FEWD Week 8-->
+			 <section data-markdown="GA/FEWD_Curriculum/Week_08_forms_and_things/15_form_basics/slides_1.md"
 				data-separator="^---"
 				data-separator-vertical="^--"
 				data-separator-notes="^Note:"
 				data-charset="iso-8859-15">
-			 </section>-->
+			 </section>
+			 <section data-markdown="GA/FEWD_Curriculum/Week_08_forms_and_things/15_form_basics/slides.md"
+				data-separator="^---"
+				data-separator-vertical="^--"
+				data-separator-notes="^Note:"
+				data-charset="iso-8859-15">
+			 </section>
 
 			 <!-- GA FEWD Week 9 -->
-			 
+
 			 <!-- GA FEWD Week 10 -->
 
 				<!-- GA PFNP
